force-app/main/default/objects/Product2/fields/Product_UOM__c.field-meta.xml
<CustomField>
    <fullName>Product_UOM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit of Measure</label>
    <referenceTo>Product_UOM__c</referenceTo>
    <relationshipLabel>Product Units of Measure</relationshipLabel>
    <relationshipName>Product_Product_UOM</relationshipName>
    <type>Lookup</type>
</CustomField>