force-app/main/default/objects/Product2/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <filterItems>
            <field>Account.Is_Service_Provider__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Plans</relationshipLabel>
    <relationshipName>Service_Provider_Product2</relationshipName>
    <type>Lookup</type>
</CustomField>