force-app/main/default/objects/Product2/recordTypes/Service_Plan.recordType-meta.xml
<RecordType>
    <fullName>Service_Provider_Plan</fullName>
    <active>true</active>
    <label>Service Provider Plan</label>
</RecordType>